# todox

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  alarm.txt  doxygen.sh  format.sh  install.sh
.github/workflows/: ci.yml
include/app/: app.h  io.h  parse.h
include/compat/bsd/: time.h
include/error/: error.h
include/file/: config.h  format.h
include/list/: list.h
include/notify/: notify.h
include/repeat/: repeat.h
src/: main.c
src/app/: app.c  io.c  parse.c
src/compat/bsd/: README.md  time.c
src/compat/bsd/rc.d/: todox
src/error/: error.c
src/list/: list.c
src/notify/: dbus.c  notify.c
src/repeat/: repeat.c
src/time/: table.c  time.c
tests/: main.c  test.h  test_list.c  test_parse.c  test_repeat.c  test_time.c
